--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -1,6 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
@@ -14,7 +17,7 @@
       <service name="LULU_WCF_Service.Service1">
         <host>
           <baseAddresses>
-            <add baseAddress = "http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/Service1/" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/Service1/" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
@@ -26,13 +29,13 @@
               automatically.
           -->
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
         <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. --> 
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
         <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
@@ -40,7 +43,7 @@
         <behavior>
           <!-- To avoid disclosing metadata information, 
           set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
           <!-- To receive exception details in faults for debugging purposes, 
           set the value below to true.  Set to false before deployment 
           to avoid disclosing exception information -->
@@ -49,5 +52,17 @@
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
-
+  <connectionStrings>
+    <add name="LULU_ModelContainer" connectionString="metadata=res://*/LULU_Model.csdl|res://*/LULU_Model.ssdl|res://*/LULU_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=lulu.cxhb4yiifojy.us-west-2.rds.amazonaws.com,1433;initial catalog=LULU_DB;persist security info=True;user id=lulu;password=Ashaman1982;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
