--- a/LULU_WCF_Service/LULU_WCF_Service.csproj
+++ b/LULU_WCF_Service/LULU_WCF_Service.csproj
@@ -35,22 +35,107 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AtttendedClass.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Campus.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Class.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ClassRoom.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Course.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GPS_Login.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="IService1.cs" />
+    <Compile Include="Lecturer.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LULU_Model.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LULU_Model.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LULU_Model.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LULU_Model.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LULU_Model.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
+    <Compile Include="Staff_Login.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Staff_User.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Student.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>LULU_Model.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="LULU_Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>LULU_Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="LULU_Model.edmx.diagram">
+      <DependentUpon>LULU_Model.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LULU_Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>LULU_Model.Context.cs</LastGenOutput>
+      <DependentUpon>LULU_Model.edmx</DependentUpon>
+    </Content>
+    <Content Include="LULU_Model.edmx.sql" />
+    <Content Include="LULU_Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>LULU_Model.cs</LastGenOutput>
+      <DependentUpon>LULU_Model.edmx</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
