--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -14,28 +14,18 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="LULU_WCF_Service.Service1">
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/Service1/" />
-          </baseAddresses>
-        </host>
-        <!-- Service Endpoints -->
-        <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="" binding="basicHttpBinding" contract="LULU_WCF_Service.IService1">
-          <!-- 
-              Upon deployment, the following identity element should be removed or replaced to reflect the 
-              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
-              automatically.
-          -->
+      <service name="LULU_WCF_Service.LULU_Service">
+        <endpoint address="" binding="basicHttpBinding" contract="LULU_WCF_Service.LULU_Service">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
-        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/LULU_Service/" />
+          </baseAddresses>
+        </host>
       </service>
     </services>
     <behaviors>
