--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -1,58 +1,64 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" />
+    <compilation debug="true"/>
   </system.web>
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="LULU_WCF_Service.LULU_Service">
-        <endpoint address="" binding="basicHttpBinding" contract="LULU_WCF_Service.LULU_Service">
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      <service behaviorConfiguration="LULU_WCF_Service_Behaviour" name="LULU_WCF_Service.LULU_Service">
+        <endpoint address="/IStudentService" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="StudentServiceEndpoint" contract="LULU_WCF_Service.Interfaces.IStudentService"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/LULU_Service/" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/"/>
           </baseAddresses>
         </host>
       </service>
     </services>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="LULU_WCF_Service_BasicHttpBinding" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="128" maxStringContentLength="2147483647" maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647"/>
+        </binding>
+      </basicHttpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, 
-          set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
-          <!-- To receive exception details in faults for debugging purposes, 
-          set the value below to true.  Set to false before deployment 
-          to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+        <behavior name="LULU_WCF_Service_Behaviour">
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <serviceDebug includeExceptionDetailInFaults="False"/>
+          <dataContractSerializer ignoreExtensionDataObject="false" maxItemsInObjectGraph="2147483647"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
   <connectionStrings>
-    <add name="LULU_ModelContainer" connectionString="metadata=res://*/LULU_Model.csdl|res://*/LULU_Model.ssdl|res://*/LULU_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=lulu.cxhb4yiifojy.us-west-2.rds.amazonaws.com,1433;initial catalog=LULU_DB;persist security info=True;user id=lulu;password=Ashaman1982;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LULU_ModelContainer" connectionString="metadata=res://*/LULU_Model.csdl|res://*/LULU_Model.ssdl|res://*/LULU_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=lulu.cxhb4yiifojy.us-west-2.rds.amazonaws.com,1433;initial catalog=LULU_DB;persist security info=True;user id=lulu;password=Ashaman1982;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
-</configuration>
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
+        <listeners>
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\log\Traces.svclog"/>
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
