--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -15,6 +15,7 @@
     <services>
       <service behaviorConfiguration="LULU_WCF_Service_Behaviour" name="LULU_WCF_Service.LULU_Service">
         <endpoint address="/IStudentService" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="StudentServiceEndpoint" contract="LULU_WCF_Service.Interfaces.IStudentService"/>
+        <endpoint address="/ICampusService" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CampusServiceEndpoint" contract="LULU_WCF_Service.Interfaces.ICampus"/>
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/"/>
