--- a/LULU_WCF_Service/LULU_WCF_Service.csproj
+++ b/LULU_WCF_Service/LULU_WCF_Service.csproj
@@ -67,7 +67,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Serializers.cs" />
+    <Compile Include="Interfaces\ICampus.cs" />
     <Compile Include="Interfaces\IStudentService.cs" />
+    <Compile Include="LULU_Service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
