Implemented DataContactSerializer, and finished List Deserializer.

--- a/LULU_WCF_Service/LULU_WCF_Service.csproj
+++ b/LULU_WCF_Service/LULU_WCF_Service.csproj
@@ -68,8 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Serializers.cs" />
+    <Compile Include="Common\Utf8StringWriter.cs" />
     <Compile Include="Interfaces\ICampus.cs" />
-    <Compile Include="Interfaces\IStudentService.cs" />
+    <Compile Include="Interfaces\IClass.cs" />
+    <Compile Include="Interfaces\IStudent.cs" />
     <Compile Include="LULU_Service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
