--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -14,11 +14,18 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="LULU_WCF_Service_Behaviour" name="LULU_WCF_Service.LULU_Service">
-        <endpoint address="/IStudentService" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="StudentServiceEndpoint" contract="LULU_WCF_Service.Interfaces.IStudentService"/>
-        <endpoint address="/ICampusService" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CampusServiceEndpoint" contract="LULU_WCF_Service.Interfaces.ICampus"/>
+        <endpoint address="/IStudentService" binding="basicHttpBinding"
+          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="StudentServiceEndpoint"
+          contract="LULU_WCF_Service.Interfaces.IStudent" />
+        <endpoint address="/ICampusService" binding="basicHttpBinding"
+          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CampusServiceEndpoint"
+          contract="LULU_WCF_Service.Interfaces.ICampus" />
+        <endpoint address="/IClassService" binding="basicHttpBinding"
+          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="ClassServiceEndpoint"
+          contract="LULU_WCF_Service.Interfaces.IClass" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/"/>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/" />
           </baseAddresses>
         </host>
       </service>
@@ -57,7 +64,7 @@
     <sources>
       <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
         <listeners>
-          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\log\Traces.svclog"/>
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\Users\arcan\Desktop\Traces.svclog"/>
         </listeners>
       </source>
     </sources>
