--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -23,6 +23,15 @@
         <endpoint address="/IClassService" binding="basicHttpBinding"
           bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="ClassServiceEndpoint"
           contract="LULU_WCF_Service.Interfaces.IClass" />
+        <endpoint address="/IClassRoomService" binding="basicHttpBinding"
+          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="ClassRoomServiceEndpoint"
+          contract="LULU_WCF_Service.Interfaces.IClassRoom" />
+        <endpoint address="/ICourseService" binding="basicHttpBinding"
+          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CourseServiceEndpoint"
+          contract="LULU_WCF_Service.Interfaces.ICourse" />
+        <endpoint address="/IUserService" binding="basicHttpBinding"
+          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CourseServiceEndpoint"
+          contract="LULU_WCF_Service.Interfaces.IUser" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/" />
