--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -3,6 +3,23 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
+  <log4net>
+    <root>
+      <level value="INFO" />
+      <appender-ref ref="RollingFileAppender" />
+    </root>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender, log4net">
+      <file type="log4net.Util.PatternStrting" value="%envFolderPath{MyDocuments}\LULU_WCF_Service\Logs\LULU_WCF_Service.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maximumFileSize value="10MB" />
+      <maxSizeRollBackups value="10" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%logger] - %level - %location - %message%newline%exception" />
+      </layout>
+    </appender>
+  </log4net>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
