Updated methods with try-catch blocks and implemented logging with log4net.

--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -2,11 +2,13 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.15.0, Culture=neutral"/>
   </configSections>
   <log4net>
     <root>
       <level value="INFO" />
       <appender-ref ref="RollingFileAppender" />
+      <appender-ref ref="TraceAppender" />
     </root>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender, log4net">
       <file type="log4net.Util.PatternStrting" value="%envFolderPath{MyDocuments}\LULU_WCF_Service\Logs\LULU_WCF_Service.log" />
@@ -15,6 +17,11 @@
       <maximumFileSize value="10MB" />
       <maxSizeRollBackups value="10" />
       <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%logger] - %level - %location - %message%newline%exception" />
+      </layout>
+    </appender>
+    <appender name="TraceAppender" type="log4net.Appender.TraceAppender, log4net">
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%logger] - %level - %location - %message%newline%exception" />
       </layout>
@@ -31,23 +38,17 @@
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="LULU_WCF_Service_Behaviour" name="LULU_WCF_Service.LULU_Service">
-        <endpoint address="/IStudentService" binding="basicHttpBinding"
-          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="StudentServiceEndpoint"
+        <endpoint address="/IStudent" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="StudentServiceEndpoint"
           contract="LULU_WCF_Service.Interfaces.IStudent" />
-        <endpoint address="/ICampusService" binding="basicHttpBinding"
-          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CampusServiceEndpoint"
+        <endpoint address="/ICampus" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CampusServiceEndpoint"
           contract="LULU_WCF_Service.Interfaces.ICampus" />
-        <endpoint address="/IClassService" binding="basicHttpBinding"
-          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="ClassServiceEndpoint"
+        <endpoint address="/IClass" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="ClassServiceEndpoint"
           contract="LULU_WCF_Service.Interfaces.IClass" />
-        <endpoint address="/IClassRoomService" binding="basicHttpBinding"
-          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="ClassRoomServiceEndpoint"
+        <endpoint address="/IClassRoom" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="ClassRoomServiceEndpoint"
           contract="LULU_WCF_Service.Interfaces.IClassRoom" />
-        <endpoint address="/ICourseService" binding="basicHttpBinding"
-          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CourseServiceEndpoint"
+        <endpoint address="/ICourse" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CourseServiceEndpoint"
           contract="LULU_WCF_Service.Interfaces.ICourse" />
-        <endpoint address="/IUserService" binding="basicHttpBinding"
-          bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="CourseServiceEndpoint"
+        <endpoint address="/IUser" binding="basicHttpBinding" bindingConfiguration="LULU_WCF_Service_BasicHttpBinding" name="UserServiceEndpoint"
           contract="LULU_WCF_Service.Interfaces.IUser" />
         <host>
           <baseAddresses>
