--- a/DeployFiles/Web.config
+++ b/DeployFiles/Web.config
@@ -91,7 +91,7 @@
     <sources>
       <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
         <listeners>
-          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\Users\arcan\Desktop\Traces.svclog"/>
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\Users\Administrator\Desktop\Traces.svclog"/>
         </listeners>
       </source>
     </sources>
