--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -67,6 +67,13 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="LULU_WCF_Service_Behaviour">
+          <!-- Added useRequestHeadersForMetadataAddress to account for disparity between Server address over internet and resolution of server name 
+          in AWS EC2 -->
+          <useRequestHeadersForMetadataAddress>
+            <defaultPorts>
+              <add scheme="http" port="80" />
+            </defaultPorts>
+          </useRequestHeadersForMetadataAddress>
           <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <dataContractSerializer ignoreExtensionDataObject="false" maxItemsInObjectGraph="2147483647"/>
