Updated with Model and DAL separated into 2 DLLs.

--- a/DeployFiles/Web.config
+++ b/DeployFiles/Web.config
@@ -52,7 +52,7 @@
           contract="LULU_WCF_Service.Interfaces.IUser" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/" />
+            <add baseAddress="http://localhost/LULU_WCF_Service/" />
           </baseAddresses>
         </host>
       </service>
@@ -67,6 +67,13 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="LULU_WCF_Service_Behaviour">
+          <!-- Added useRequestHeadersForMetadataAddress to account for disparity between Server address over internet and resolution of server name 
+          in AWS EC2 -->
+          <useRequestHeadersForMetadataAddress>
+            <defaultPorts>
+              <add scheme="http" port="80" />
+            </defaultPorts>
+          </useRequestHeadersForMetadataAddress>
           <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <dataContractSerializer ignoreExtensionDataObject="false" maxItemsInObjectGraph="2147483647"/>
@@ -91,7 +98,7 @@
     <sources>
       <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
         <listeners>
-          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\Users\Administrator\Desktop\Traces.svclog"/>
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\Users\arcan\Desktop\Traces.svclog"/>
         </listeners>
       </source>
     </sources>
