--- a/DeployFiles/Web.config
+++ b/DeployFiles/Web.config
@@ -52,7 +52,7 @@
           contract="LULU_WCF_Service.Interfaces.IUser" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost/LULU_WCF_Service/" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/LULU_WCF_Service/" />
           </baseAddresses>
         </host>
       </service>
