--- a/LULU_WCF_Service/App.config
+++ b/LULU_WCF_Service/App.config
@@ -75,7 +75,7 @@
     </behaviors>
   </system.serviceModel>
   <connectionStrings>
-    <add name="LULU_ModelContainer" connectionString="metadata=res://*/LULU_Model.csdl|res://*/LULU_Model.ssdl|res://*/LULU_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=lulu.cxhb4yiifojy.us-west-2.rds.amazonaws.com,1433;initial catalog=LULU_DB;persist security info=True;user id=lulu;password=Ashaman1982;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="LULU_ModelContainer" connectionString="metadata=res://*/LULU_Model.csdl|res://*/LULU_Model.ssdl|res://*/LULU_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=lulu.cbnq1fh7rfdz.eu-west-1.rds.amazonaws.com,1433;initial catalog=LULU_DB;persist security info=True;user id=lulu;password=Gortnaghey1982;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
